<resources>
    <string name="app_name">ConstraintLayout2</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_five">Box Five</string>
    <string name="box_four">Box Four</string>
    <string name="guide">Tap the screen and buttons</string>
    <string name="guidee">Tap the screen and buttons</string>
    <string name="how_to_play">How to play:</string>
    <string name="Guide">Tap on the screen and buttons</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
</resources>